# pp8

./: .gitignore  README.md  experiment.txt  init.sh  morenotes.txt  notes.txt  notes05.04.2024  notes_taskmap.txt  scann_dadd.sh  test.gdb  testGDB.sh  testdadd.sh
3_tasktype_estimator/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.cpp  config.h  constants.cpp  constants.h  experiment.config  main.cpp  run_build.sh  run_checkpreconditions.sh  run_estimation.sh  run_test_estimation.sh  tools.cpp  tools.hpp
3_tasktype_estimator/estimation/: MeasureResult.h  estimator.cpp  measure.cpp  measure.h
3_tasktype_estimator/include/: MeasureResult.h  Result.h  config.h  constants.h  estimator.h  measure.h  taskclasses.h  taskmapperDiffsearch.h  taskmapperLog.h  taskmapperOneToMany.h  taskmapperOneToOne.h  taskmapperPairsearch.h  tools.hpp
3_tasktype_estimator/logs/: counter.txt
3_tasktype_estimator/results/: 20240411_14_24_result.txt  20240411_15_36_result.txt  20240413_12_36_result.txt  20240414_result_16.txt  20240422_13_09_result.txt  20240428_14_43_result.txt  202405011200_result.txt  20240501_result.txt  202405042059_result.txt  20240504_17_03result.txt  20240505_1147result.txt  202405101853.result  202405102015.result  202405111047.result  202405111307_pthread.result  202405121254.result  202405121312.result  202405121330.result  202405142037.result  202405181311.result  202406081156.result  202406081519.result  202406081627.result  202406081708.result  202406081814.result  202406081906.result  202406091219.result  202406091225.result  (+9 more)
experiment/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.cpp  constants.h  experiment  experiment.config  experiment.ini  main  main.cpp  measure.cpp  readEnergy_UJ.sh  runSampleApplication.sh  search.cpp  test.sh  testRaplRead.sh  testpowercap.sh  tools.cpp  tools.hpp
(+204 files in other folders)
